@@ -1,32 +1,13 @@
 package org.sinrel.engine.library.cryption;
 
-import java.io.IOException;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 public abstract class Base64 {
 
-   public static String decode( String s ) {
-	   BASE64Decoder decoder = new BASE64Decoder();
-	   
-	   byte[] decoded;
-	   
-	   try {
-		   decoded = decoder.decodeBuffer( s );
-		   
-		   return new String( decoded );  
-	   } catch (IOException e) {
-		   return "";
-	   }
-   }
-   
-   public static String encode( String s ) {
-	   BASE64Encoder encoder = new BASE64Encoder();
-	   
-	   String encoded = encoder.encodeBuffer( s.getBytes() );
-	   
-	   return encoded;
-   }
-	
- }
+	public static byte[] decode(String s) {
+		return org.apache.commons.codec.binary.Base64.decodeBase64(s);
+	}
+
+	public static String encode(byte[] b) {
+		return org.apache.commons.codec.binary.Base64.encodeBase64URLSafeString(b);
+	}
+
+}
